fix(masthead): Wrap menu content when longer than the mobile or medium breakpoint (#7126)
### Related Ticket(s)
Fixes #3518 and #4003 

### Description
PR overrides styles coming from `@carbon` package as follows:
- Changes `height:3rem` rules to `min-height:3rem` to allow items to expand vertically
- Negates text truncation & ellipses effect, allowing text to wrap to multiple lines
- Adds padding to text-containers to ensure a consistent amount of padding between items & dividers
 
### Changelog

**Changed**
- Masthead menu item text wraps and displays in-full in mobile & tablet sizes

--- a/packages/styles/scss/components/masthead/_masthead-leftnav.scss
+++ b/packages/styles/scss/components/masthead/_masthead-leftnav.scss
@@ -115,7 +115,8 @@
     }
 
     .#{$prefix}--side-nav__item {
-      height: $container-04;
+      height: auto;
+      min-height: $container-04;
 
       .#{$prefix}--side-nav__submenu {
         height: 100%;
@@ -189,15 +190,17 @@
 
       display: flex;
       color: $text-01;
-      padding: 0 $carbon--spacing-05;
-      height: 3rem;
+      padding: 0.8rem $carbon--spacing-05;
+      height: auto;
+      min-height: 3rem;
       border-bottom: 1px solid $ui-04;
       align-items: center;
     }
 
     .#{$prefix}--side-nav__item
       .#{$prefix}--masthead__side-nav--submemu-section-title {
-      height: 3rem;
+      height: auto;
+      min-height: 3rem;
 
       span {
         @include carbon--type-style(productive-heading-02);
@@ -212,6 +215,8 @@
       flex: 1;
       justify-content: flex-end;
       align-items: center;
+      align-self: flex-start;
+      margin-top: rem(2px);
     }
   }
 
@@ -337,7 +342,8 @@
 
     .#{$prefix}--side-nav__submenu-content {
       width: 100%;
-      height: rem(48px);
+      height: auto;
+      min-height: rem(48px);
       display: flex;
       border-bottom: 1px solid $ui-03;
     }
@@ -351,7 +357,7 @@
 
     &[aria-haspopup='true'] {
       height: $container-04;
-      &.bx--side-nav__submenu-platform {
+      &.#{$prefix}--side-nav__submenu-platform {
         border-top: 1px solid $ui-03;
         border-bottom: 1px solid $ui-04;
         text-decoration: none;
@@ -368,6 +374,14 @@
         color: $text-01;
       }
     }
+  }
+
+  .#{$prefix}--side-nav__submenu-title,
+  a.#{$prefix}--side-nav__link > .#{$prefix}--side-nav__link-text,
+  button.#{$prefix}--side-nav__link > .#{$prefix}--side-nav__link-text {
+    text-overflow: initial;
+    white-space: normal;
+    padding: 0.8rem 0;
   }
 
   .#{$prefix}--masthead__side-nav--submemu-heading,
@@ -413,7 +427,8 @@
     a.#{$prefix}--side-nav__link[role='menuitem'] {
     display: flex;
     padding-left: $carbon--spacing-05;
-    height: carbon--mini-units(6);
+    height: auto;
+    min-height: carbon--mini-units(6);
     width: 100%;
   }
 
